Working donut. Set up testing environment

--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>My first d3.js</title>
-    <link href="css/style.css" rel="stylesheet">
-  </head>
-
-  <body>
-    <div id="mySVG"></div>
-    <script src="lib/javascript/d3.js"></script>
-    <script src="js/test.js"></script>
-  </body>
+<html>
+    <head>
+        <title>Elastic Aggregations</title>
+        <script src="lib/js/require.js"></script>
+        <script>require(["js/main"], function () {})</script>
+        <style>
+            body {
+                font: 14px sans-serif;
+            }
+            .arc path {
+                stroke: #fff; 
+                stroke-width: 3px;
+            }
+        </style>
+    </head>
+    <body>
+        <div id="donut-chart"></div>
+    </body>
+</html>
