--- a/index.html
+++ b/index.html
@@ -12,9 +12,23 @@
                 stroke: #fff; 
                 stroke-width: 3px;
             }
+            .node circle {
+                fill: #fff;
+                stroke: steelblue;
+                stroke-width: 1.5px;
+            }
+            .node {
+                font: 10px sans-serif;
+            }
+            .link {
+                fill: none;
+                stroke: #ccc;
+                stroke-width: 1.5px;
+            }
         </style>
     </head>
     <body>
         <div id="donut-chart"></div>
+        <div id="dendrogram"></div>
     </body>
 </html>
