--- a/index.html
+++ b/index.html
@@ -1,34 +1,18 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Elastic Aggregations</title>
-        <script src="lib/js/require.js"></script>
-        <script>require(["js/main"], function () {})</script>
-        <style>
-            body {
-                font: 14px sans-serif;
-            }
-            .arc path {
-                stroke: #fff; 
-                stroke-width: 3px;
-            }
-            .node circle {
-                fill: #fff;
-                stroke: steelblue;
-                stroke-width: 1.5px;
-            }
-            .node {
-                font: 10px sans-serif;
-            }
-            .link {
-                fill: none;
-                stroke: #ccc;
-                stroke-width: 1.5px;
-            }
-        </style>
-    </head>
-    <body>
-        <div id="donut-chart"></div>
-        <div id="dendrogram"></div>
-    </body>
+<!doctype html>
+<html lang="en">
+<head>
+  <title>Wannabe Kibana</title>
+  <!-- Load page design -->
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <!-- Load the script "js/main.js" as our entry point -->
+  <script data-main="js/main" src="js/libs/require/require.js"></script>
+</head>
+<body>
+
+  <div id="container">
+    <div id="donut-chart"></div>
+    <div id="dendrogram"></div>
+  </div>
+
+</body>
 </html>
